--- a/eventos/mahle/mahle.html
+++ b/eventos/mahle/mahle.html
@@ -4,10 +4,10 @@
 	<title>Mahle</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	
-	<link rel="shortcut icon" type="image/x-icon" href="../../img/favicon.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
-	<script type="text/javascript" src="engine1/jquery.js"></script>
+	<link rel="stylesheet" type="text/css" href="eventos/mahle/engine1/style.css" />
+	<script type="text/javascript" src="eventos/mahle/engine1/jquery.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
 
 </head>
@@ -18,35 +18,35 @@
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-		<li><img src="data1/images/01.jpg" alt="01" title="01" id="wows1_0"/></li>
+		<li><img src="eventos/mahle/data1/images/01.jpg" alt="01" title="01" id="wows1_0"/></li>
 	</ul></div>
 	<div class="ws_thumbs">
 <div>
-		<a href="data1/images/01.jpg" title="01"><img src="data1/tooltips/01.jpg" alt="" /></a>
-		<a href="data1/images/02.jpg" title="02"><img src="data1/tooltips/02.jpg" alt="" /></a>
-		<a href="data1/images/03.jpg" title="03"><img src="data1/tooltips/03.jpg" alt="" /></a>
-		<a href="data1/images/04.jpg" title="04"><img src="data1/tooltips/04.jpg" alt="" /></a>
-		<a href="data1/images/05.jpg" title="05"><img src="data1/tooltips/05.jpg" alt="" /></a>
-		<a href="data1/images/06.jpg" title="06"><img src="data1/tooltips/06.jpg" alt="" /></a>
-		<a href="data1/images/07.jpg" title="07"><img src="data1/tooltips/07.jpg" alt="" /></a>
-		<a href="data1/images/08.jpg" title="08"><img src="data1/tooltips/08.jpg" alt="" /></a>
-		<a href="data1/images/09.jpg" title="09"><img src="data1/tooltips/09.jpg" alt="" /></a>
-		<a href="data1/images/10.jpg" title="10"><img src="data1/tooltips/10.jpg" alt="" /></a>
-		<a href="data1/images/11.jpg" title="11"><img src="data1/tooltips/11.jpg" alt="" /></a>
-		<a href="data1/images/12.jpg" title="12"><img src="data1/tooltips/12.jpg" alt="" /></a>
-		<a href="data1/images/13.jpg" title="13"><img src="data1/tooltips/13.jpg" alt="" /></a>
-		<a href="data1/images/14.jpg" title="14"><img src="data1/tooltips/14.jpg" alt="" /></a>
-		<a href="data1/images/15.jpg" title="15"><img src="data1/tooltips/15.jpg" alt="" /></a>
-		<a href="data1/images/16.jpg" title="16"><img src="data1/tooltips/16.jpg" alt="" /></a>
-		<a href="data1/images/17.jpg" title="17"><img src="data1/tooltips/17.jpg" alt="" /></a>
-		<a href="data1/images/18.jpg" title="18"><img src="data1/tooltips/18.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/01.jpg" title="01"><img src="eventos/mahle/data1/tooltips/01.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/02.jpg" title="02"><img src="eventos/mahle/data1/tooltips/02.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/03.jpg" title="03"><img src="eventos/mahle/data1/tooltips/03.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/04.jpg" title="04"><img src="eventos/mahle/data1/tooltips/04.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/05.jpg" title="05"><img src="eventos/mahle/data1/tooltips/05.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/06.jpg" title="06"><img src="eventos/mahle/data1/tooltips/06.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/07.jpg" title="07"><img src="eventos/mahle/data1/tooltips/07.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/08.jpg" title="08"><img src="eventos/mahle/data1/tooltips/08.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/09.jpg" title="09"><img src="eventos/mahle/data1/tooltips/09.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/10.jpg" title="10"><img src="eventos/mahle/data1/tooltips/10.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/11.jpg" title="11"><img src="eventos/mahle/data1/tooltips/11.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/12.jpg" title="12"><img src="eventos/mahle/data1/tooltips/12.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/13.jpg" title="13"><img src="eventos/mahle/data1/tooltips/13.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/14.jpg" title="14"><img src="eventos/mahle/data1/tooltips/14.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/15.jpg" title="15"><img src="eventos/mahle/data1/tooltips/15.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/16.jpg" title="16"><img src="eventos/mahle/data1/tooltips/16.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/17.jpg" title="17"><img src="eventos/mahle/data1/tooltips/17.jpg" alt="" /></a>
+		<a href="eventos/mahle/data1/images/18.jpg" title="18"><img src="eventos/mahle/data1/tooltips/18.jpg" alt="" /></a>
 	</div>
 </div>
 
 	<div class="ws_shadow"></div>
 	</div>	
-	<script type="text/javascript" src="engine1/wowslider.js"></script>
-	<script type="text/javascript" src="engine1/script.js"></script>
+	<script type="text/javascript" src="eventos/mahle/engine1/wowslider.js"></script>
+	<script type="text/javascript" src="eventos/mahle/engine1/script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
 
 </body>
