--- a/eventos/box7/box7.html
+++ b/eventos/box7/box7.html
@@ -4,10 +4,10 @@
 	<title>Box7-Palestra Dudu Costa</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	
-	<link rel="shortcut icon" type="image/x-icon" href="../../img/favicon.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
-	<script type="text/javascript" src="engine1/jquery.js"></script>
+	<link rel="stylesheet" type="text/css" href="eventos/box7/engine1/style.css" />
+	<script type="text/javascript" src="eventos/box7/engine1/jquery.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
 
 </head>
@@ -18,38 +18,38 @@
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-		<li><img src="data1/images/box_1.jpg" alt="box (1)" title="box (1)" id="wows1_0"/></li>
+		<li><img src="eventos/box7/data1/images/box_1.jpg" alt="box (1)" title="box (1)" id="wows1_0"/></li>
 	</ul></div>
 	<div class="ws_thumbs">
 <div>
-		<a href="data1/images/box_1.jpg" title="box (1)"><img src="data1/tooltips/box_1.jpg" alt="" /></a>
-		<a href="data1/images/box_2.jpg" title="box (2)"><img src="data1/tooltips/box_2.jpg" alt="" /></a>
-		<a href="data1/images/box_3.jpg" title="box (3)"><img src="data1/tooltips/box_3.jpg" alt="" /></a>
-		<a href="data1/images/box_4.jpg" title="box (4)"><img src="data1/tooltips/box_4.jpg" alt="" /></a>
-		<a href="data1/images/box_5.jpg" title="box (5)"><img src="data1/tooltips/box_5.jpg" alt="" /></a>
-		<a href="data1/images/box_6.jpg" title="box (6)"><img src="data1/tooltips/box_6.jpg" alt="" /></a>
-		<a href="data1/images/box_7.jpg" title="box (7)"><img src="data1/tooltips/box_7.jpg" alt="" /></a>
-		<a href="data1/images/box_8.jpg" title="box (8)"><img src="data1/tooltips/box_8.jpg" alt="" /></a>
-		<a href="data1/images/box_9.jpg" title="box (9)"><img src="data1/tooltips/box_9.jpg" alt="" /></a>
-		<a href="data1/images/box_10.jpg" title="box (10)"><img src="data1/tooltips/box_10.jpg" alt="" /></a>
-		<a href="data1/images/box_11.jpg" title="box (11)"><img src="data1/tooltips/box_11.jpg" alt="" /></a>
-		<a href="data1/images/box_12.jpg" title="box (12)"><img src="data1/tooltips/box_12.jpg" alt="" /></a>
-		<a href="data1/images/box_13.jpg" title="box (13)"><img src="data1/tooltips/box_13.jpg" alt="" /></a>
-		<a href="data1/images/box_14.jpg" title="box (14)"><img src="data1/tooltips/box_14.jpg" alt="" /></a>
-		<a href="data1/images/box_15.jpg" title="box (15)"><img src="data1/tooltips/box_15.jpg" alt="" /></a>
-		<a href="data1/images/box_16.jpg" title="box (16)"><img src="data1/tooltips/box_16.jpg" alt="" /></a>
-		<a href="data1/images/box_17.jpg" title="box (17)"><img src="data1/tooltips/box_17.jpg" alt="" /></a>
-		<a href="data1/images/box_18.jpg" title="box (18)"><img src="data1/tooltips/box_18.jpg" alt="" /></a>
-		<a href="data1/images/box_19.jpg" title="box (19)"><img src="data1/tooltips/box_19.jpg" alt="" /></a>
-		<a href="data1/images/box_20.jpg" title="box (20)"><img src="data1/tooltips/box_20.jpg" alt="" /></a>
-		<a href="data1/images/box_21.jpg" title="box (21)"><img src="data1/tooltips/box_21.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_1.jpg" title="box (1)"><img src="eventos/box7/data1/tooltips/box_1.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_2.jpg" title="box (2)"><img src="eventos/box7/data1/tooltips/box_2.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_3.jpg" title="box (3)"><img src="eventos/box7/data1/tooltips/box_3.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_4.jpg" title="box (4)"><img src="eventos/box7/data1/tooltips/box_4.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_5.jpg" title="box (5)"><img src="eventos/box7/data1/tooltips/box_5.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_6.jpg" title="box (6)"><img src="eventos/box7/data1/tooltips/box_6.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_7.jpg" title="box (7)"><img src="eventos/box7/data1/tooltips/box_7.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_8.jpg" title="box (8)"><img src="eventos/box7/data1/tooltips/box_8.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_9.jpg" title="box (9)"><img src="eventos/box7/data1/tooltips/box_9.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_10.jpg" title="box (10)"><img src="eventos/box7/data1/tooltips/box_10.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_11.jpg" title="box (11)"><img src="eventos/box7/data1/tooltips/box_11.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_12.jpg" title="box (12)"><img src="eventos/box7/data1/tooltips/box_12.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_13.jpg" title="box (13)"><img src="eventos/box7/data1/tooltips/box_13.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_14.jpg" title="box (14)"><img src="eventos/box7/data1/tooltips/box_14.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_15.jpg" title="box (15)"><img src="eventos/box7/data1/tooltips/box_15.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_16.jpg" title="box (16)"><img src="eventos/box7/data1/tooltips/box_16.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_17.jpg" title="box (17)"><img src="eventos/box7/data1/tooltips/box_17.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_18.jpg" title="box (18)"><img src="eventos/box7/data1/tooltips/box_18.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_19.jpg" title="box (19)"><img src="eventos/box7/data1/tooltips/box_19.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_20.jpg" title="box (20)"><img src="eventos/box7/data1/tooltips/box_20.jpg" alt="" /></a>
+		<a href="eventos/box7/data1/images/box_21.jpg" title="box (21)"><img src="eventos/box7/data1/tooltips/box_21.jpg" alt="" /></a>
 	</div>
 </div>
 
 	<div class="ws_shadow"></div>
 	</div>	
-	<script type="text/javascript" src="engine1/wowslider.js"></script>
-	<script type="text/javascript" src="engine1/script.js"></script>
+	<script type="text/javascript" src="eventos/box7/engine1/wowslider.js"></script>
+	<script type="text/javascript" src="eventos/box7/engine1/script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
 
 </body>
