--- a/eventos/cdl/cdl.html
+++ b/eventos/cdl/cdl.html
@@ -4,10 +4,10 @@
 	<title>Feijoada cdl</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	
-	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="../../img/favicon.png" />
 	<!-- Start WOWSlider.com HEAD section --> <!-- add to the <head> of your page -->
-	<link rel="stylesheet" type="text/css" href="eventos/cdl/engine1/style.css" />
-	<script type="text/javascript" src="eventos/cdl/engine1/jquery.js"></script>
+	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
+	<script type="text/javascript" src="engine1/jquery.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
 
 </head>
@@ -18,27 +18,27 @@
 	<!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-		<li><img src="eventos/cdl/data1/images/1.jpg" alt="1" title="1" id="wows1_0"/></li>
+		<li><img src="data1/images/1.jpg" alt="1" title="1" id="wows1_0"/></li>
 	</ul></div>
 	<div class="ws_thumbs">
 <div>
-		<a href="eventos/cdl/data1/images/1.jpg" title="1"><img src="eventos/cdl/data1/tooltips/1.jpg" alt="" /></a>
-		<a href="eventos/cdl/data1/images/2.jpg" title="2"><img src="eventos/cdl/data1/tooltips/2.jpg" alt="" /></a>
-		<a href="eventos/cdl/data1/images/3.jpg" title="3"><img src="eventos/cdl/data1/tooltips/3.jpg" alt="" /></a>
-		<a href="eventos/cdl/data1/images/4.jpg" title="4"><img src="eventos/cdl/data1/tooltips/4.jpg" alt="" /></a>
-		<a href="eventos/cdl/data1/images/5.jpg" title="5"><img src="eventos/cdl/data1/tooltips/5.jpg" alt="" /></a>
-		<a href="eventos/cdl/data1/images/6.jpg" title="6"><img src="eventos/cdl/data1/tooltips/6.jpg" alt="" /></a>
-		<a href="eventos/cdl/data1/images/7.jpg" title="7"><img src="eventos/cdl/data1/tooltips/7.jpg" alt="" /></a>
-		<a href="eventos/cdl/data1/images/8.jpg" title="8"><img src="eventos/cdl/data1/tooltips/8.jpg" alt="" /></a>
-		<a href="eventos/cdl/data1/images/9.jpg" title="9"><img src="eventos/cdl/data1/tooltips/9.jpg" alt="" /></a>
-		<a href="eventos/cdl/data1/images/10.jpg" title="10"><img src="eventos/cdl/data1/tooltips/10.jpg" alt="" /></a>
+		<a href="data1/images/1.jpg" title="1"><img src="data1/tooltips/1.jpg" alt="" /></a>
+		<a href="data1/images/2.jpg" title="2"><img src="data1/tooltips/2.jpg" alt="" /></a>
+		<a href="data1/images/3.jpg" title="3"><img src="data1/tooltips/3.jpg" alt="" /></a>
+		<a href="data1/images/4.jpg" title="4"><img src="data1/tooltips/4.jpg" alt="" /></a>
+		<a href="data1/images/5.jpg" title="5"><img src="data1/tooltips/5.jpg" alt="" /></a>
+		<a href="data1/images/6.jpg" title="6"><img src="data1/tooltips/6.jpg" alt="" /></a>
+		<a href="data1/images/7.jpg" title="7"><img src="data1/tooltips/7.jpg" alt="" /></a>
+		<a href="data1/images/8.jpg" title="8"><img src="data1/tooltips/8.jpg" alt="" /></a>
+		<a href="data1/images/9.jpg" title="9"><img src="data1/tooltips/9.jpg" alt="" /></a>
+		<a href="data1/images/10.jpg" title="10"><img src="data1/tooltips/10.jpg" alt="" /></a>
 	</div>
 </div>
 	
 	<div class="ws_shadow"></div>
 	</div>	
-	<script type="text/javascript" src="eventos/cdl/engine1/wowslider.js"></script>
-	<script type="text/javascript" src="eventos/cdl/engine1/script.js"></script>
+	<script type="text/javascript" src="engine1/wowslider.js"></script>
+	<script type="text/javascript" src="engine1/script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
 
 </body>
